--- a/pages/login.html
+++ b/pages/login.html
@@ -173,6 +173,7 @@
           confirmButtonClass: 'btn-primary',
           confirmButtonText: 'OK',
           closeOnConfirm: false,
+          closeOnCancel: false
         },
         function(isConfirm){
           if (isConfirm){
