--- a/pages/login.html
+++ b/pages/login.html
@@ -11,6 +11,7 @@
 
     <link href="../CSS/gumfreebootstrap.css" rel="stylesheet">
     <link href="../CSS/gumfreestyle.css" rel="stylesheet">
+    <link href="../CSS/prattmain.css" rel="stylesheet">
     <script src="../JS/bootstrap.min.js"></script>
     <script src="../JS/jquery.js"></script>
 
@@ -121,6 +122,7 @@
 
 	  <script type="text/javascript" src="../JS/gumfreebootstrap.min.js"></script>
 	  <script type="text/javascript" src="../JS/gumfreejquery.backstretch.min.js"></script>
+	  <script type="text/javascript" src="./JS/prattbootstrap.js"></script>
       <script>
         $.backstretch("../picture/loginbg.jpg", {speed: 500});
       </script>
