--- a/pages/reviewpromotionpage.html
+++ b/pages/reviewpromotionpage.html
@@ -157,7 +157,8 @@
 
 <script src="../JS/jquery.min.js"></script>
 <script src="../JS/bootstrap.min.js"></script>
-<script type="text/javascript" src="./JS/bootstrap.min.js"></script>
+<script type="text/javascript" src="../JS/prattbootstrap.js"></script>
+<script type="text/javascript" src="../JS/bootstrap.min.js"></script>
 <script type="text/javascript" src="../JS/bootstrap-datetimepicker.js" charset="UTF-8"></script>
 <script type="text/javascript" src="../JS/bootstrap-datetimepicker.min.js" charset="UTF-8"></script>
 <script type="text/javascript">
