--- a/pages/newpromotionpage.html
+++ b/pages/newpromotionpage.html
@@ -175,6 +175,7 @@
 <script src="../JS/jquery.min.js"></script>
 <script src="../JS/bootstrap.min.js"></script>
 <script type="text/javascript" src="./JS/bootstrap.min.js"></script>
+<script type="text/javascript" src="../JS/prattbootstrap.js"></script>
 <script type="text/javascript" src="../JS/bootstrap-datetimepicker.js" charset="UTF-8"></script>
 <script type="text/javascript" src="../JS/bootstrap-datetimepicker.min.js" charset="UTF-8"></script>
 <script type="text/javascript">
